@@ -1,5 +1,10 @@
 2008-02-06  Neal H. Walfield  <neal@gnu.org>
 
+	* output-serial.c (serial_init): Rewrite command-line parser to
+	not use strtok.
+
+2008-02-06  Neal H. Walfield  <neal@gnu.org>
+
 	* as.c (do_index): New function.
 	(as_build_internal): Don't index a page table directly.  Instead,
 	use the above new function.
